# yolov8-obj-det

./: data.yaml  model.ipynb  predict.ipynb  pyproject.toml
data/train/: labels.cache
data/valid/: labels.cache
runs/detect/train4/: args.yaml  results.csv
